<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    tools:context="com.raywenderlich.android.octomembers.ui.member.MemberActivity">

  <LinearLayout
      android:id="@+id/linearLayout2"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@color/colorAccent"
      android:gravity="center"
      app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/memberAvatar"
        android:layout_width="0dp"
        android:layout_height="@dimen/detail_avatar_size"
        android:layout_weight="1"
        android:contentDescription="@string/detail_member_avatar"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/memberName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:textSize="24sp"
        tools:text="Name" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/linearLayout3"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@color/colorPrimary"
      android:gravity="center"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          style="@style/member_label"
          android:text="@string/label_login" />

      <TextView
          android:id="@+id/memberLogin"
          style="@style/member_info" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          style="@style/member_label"
          android:text="@string/label_company" />

      <TextView
          android:id="@+id/memberCompany"
          style="@style/member_info" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          style="@style/member_label"
          android:text="@string/label_email" />

      <TextView
          android:id="@+id/memberEmail"
          style="@style/member_info" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          style="@style/member_label"
          android:text="@string/label_type" />

      <TextView
          android:id="@+id/memberType"
          style="@style/member_info" />
    </LinearLayout>


  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
